# Docs_AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: agent.py  db.py  ingest.py  main.py
backend/app/api/v1/: chat.py  documents.py  health.py  router.py
backend/app/core/: settings.py
backend/app/schemas/: chat.py  document.py
backend/app/util/: embedding.py  setting.py
backend/eval/: evaluate.py
backend/prompt/: upload_prompt.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
tests/: test_ingest.py
