[project]
name = "docs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.115.12",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.1",
    "pydantic-settings>=2.10.1",
    "langchain-classic>=1.0.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["frontend*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
